# cine-mirror

./: .gitignore  AGENTS.md  justfile  package.json  pnpm-lock.yaml
core-film-journal/: alembic.ini  justfile  pyproject.toml
core-film-journal/alembic/: env.py
core-film-journal/alembic/versions/: 0001_initial_schema.py  0002_search_trigram_index.py
core-film-journal/src/: config.py  main.py
core-film-journal/src/api/: app.py  dependencies.py
core-film-journal/src/api/routers/: journal.py  search.py
core-film-journal/src/db/: connection.py  metadata.py  models.py
core-film-journal/src/domain/: rating.py  status.py
core-film-journal/src/events/: broker.py  consumer.py  publisher.py  schemas.py
core-film-journal/src/search/: query.py
data-collector/: .env.example  README.md  alembic.ini  justfile  pyproject.toml
data-collector/alembic/: env.py
data-collector/alembic/versions/: 0001_initial_schema.py  0002_add_movie_enrichment_fields.py
data-collector/results/: license_summary.md  matching_accuracy_report.json
data-collector/scripts/: run_pipeline.py  run_validation.py  validate_matching.py
data-collector/scripts/data/: user_movies.csv
data-collector/scripts/tests/: conftest.py  test_validate_matching.py
data-collector/src/: __init__.py  main.py
data-collector/src/db/: connection.py  models.py
data-collector/src/events/: __init__.py  broker.py  consumer.py  publisher.py  schemas.py
data-collector/src/scheduler/: jobs.py
data-collector/src/tmdb/: __init__.py  client.py  config.py  enricher.py  export_pipeline.py
frontend/: justfile  (+3 more)
(+34 files in other folders)
