[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "core-film-journal"
version = "0.1.0"
description = "영화 기록 저널 서비스"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "fastapi==0.115.6",
    "faststream[redis]==0.6.7",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "sqlalchemy==2.0.48",
    "uvicorn==0.32.1",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "pytest==8.4.2",
    "pytest-asyncio==0.26.0",
    "ruff==0.9.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "TCH", "RUF"]
