[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "data-collector"
version = "0.1.0"
description = "TMDB validation spike data collector service"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic==1.18.4",
    "apscheduler==3.11.2",
    "asyncpg==0.31.0",
    "faststream[redis]==0.6.7",
    "httpx==0.28.1",
    "polars==1.38.1",
    "python-dotenv==1.2.2",
    "sqlalchemy==2.0.48",
    "tenacity==9.1.4",
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==0.26.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
